// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`traverseDependencies() returns cycles in \`node_modules\` 1`] = `
{
  "/~/node_modules/react-native/index.js": [
    "/~/packages/test-app/lib/src/index.js",
    "/~/node_modules/react-native/index.js",
    "/~/node_modules/react-native/Libraries/ReactNative/AppRegistry.js",
    "/~/node_modules/react-native/Libraries/LogBox/LogBoxInspectorContainer.js",
  ],
  "/~/packages/test-app/lib/src/App.js": [
    "/~/packages/test-app/lib/src/index.js",
    "/~/packages/test-app/lib/src/App.js",
    "/~/packages/test-app/lib/src/cyclicExample.js",
  ],
}
`;

exports[`traverseDependencies() returns import paths causing a cycle 1`] = `
{
  "/~/packages/test-app/lib/src/App.js": [
    "/~/packages/test-app/lib/src/index.js",
    "/~/packages/test-app/lib/src/App.js",
    "/~/packages/test-app/lib/src/cyclicExample.js",
  ],
}
`;
